# Animetail

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_0.19.0-0.19.5.1.md  README.md  build.gradle.kts  commit_diff.txt  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: report_issue.yml  request_feature.yml
.github/workflows/: build_pull_request.yml  build_push.yml
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml  shortcuts.xml
app/src/main/cpp/: CMakeLists.txt  discord_bridge.cpp
app/src/main/res/drawable/: ic_tracker_ehentai.xml
buildSrc/: settings.gradle.kts
core/archive/: build.gradle.kts
core/common/: build.gradle.kts
data/: build.gradle.kts
data/src/main/sqldelight/data/: categories.sq  chapters.sq  excluded_scanlators.sq  manga_sync.sq  mangas.sq
data/src/main/sqldelight/migrations/: 10.sqm  11.sqm  36.sqm  37.sqm  38.sqm  39.sqm
data/src/main/sqldelight/view/: updatesView.sq
data/src/main/sqldelightanime/dataanime/: animes.sq  categories.sq  custom_buttons.sq  episodes.sq  feed_saved_search.sq  saved_search.sq
data/src/main/sqldelightanime/migrations/: 122.sqm  138.sqm  139.sqm  140.sqm
gradle/: androidx.versions.toml  aniyomi.versions.toml  compose.versions.toml  kotlinx.versions.toml  libs.versions.toml
i18n-aniyomi/: build.gradle.kts
i18n-tail/: build.gradle.kts
presentation-core/: build.gradle.kts
presentation-widget/: build.gradle.kts
source-api/: build.gradle.kts
source-local/: build.gradle.kts  consumer-proguard.pro
(+925 files in other folders)
